# maze_rs

./: Cargo.toml  Dioxus.toml  Makefile  README.md
assets/styling/: main.css
src/: main.rs
src/components/: maze.rs  mod.rs
src/utils/: bfs_solver.rs  dfs_solver.rs  mod.rs  utils.rs
